@@ -7,7 +7,13 @@ import io.vertx.ext.web.Route;
 import io.vertx.ext.web.Router;
 import io.vertx.ext.web.handler.*;
 
-import java.nio.file.Path;
+import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.net.URI;
+import java.nio.file.*;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.stream.Stream;
 
 /**
  * @author Bruno Salmon
@@ -30,7 +36,7 @@ final class VertxHttpRouterConfigurator {
             routingContext.next();
         });
 
-        // SPA root page shouldn't be cached (to always return the latest version with the latest GWT compilation)
+        // SPA root page shouldn't be cached (to always return the latest version with the latest GWT compilation).
         // We assume the SPA is hosted under the root / or under any path ending with / or /index.html or any path
         // including /#/ (which is used for UI routing).
         router.routeWithRegex(".*/|.*/index.html|.*/#/.*").handler(routingContext -> {
@@ -41,7 +47,7 @@ final class VertxHttpRouterConfigurator {
         // For xxx.nocache.js GWT files, "no-cache" would work also in theory, but in practice it seems that now
         // browsers - or at least Chrome - are not checking those files if index.html hasn't changed! A shame because
         // most of the time, this is those files that change (on each new GWT compilation) and not index.html. So,
-        // to force the browser to check those files, we use "no-store" (even if it is less optimised).
+        // to force the browser to check those files, we use "no-store" (even if it is less optimized).
         router.routeWithRegex(".*\\.nocache\\.js").handler(routingContext -> {
             routingContext.response().putHeader("cache-control", "public, max-age=0, no-store, must-revalidate");
             routingContext.next();
@@ -50,7 +56,7 @@ final class VertxHttpRouterConfigurator {
         return router;
     }
 
-    static void addStaticRoute(String routePattern, ReadOnlyAstArray hostnamePatterns, String pathToStaticFolder) {
+    static void addStaticRoute(String routePattern, ReadOnlyAstArray hostnamePatterns, String pathToStaticFolder) throws IOException {
         if (hostnamePatterns == null)
             addStaticRoute(routePattern, (String) null, pathToStaticFolder);
         else {
@@ -59,18 +65,64 @@ final class VertxHttpRouterConfigurator {
         }
     }
 
-    static void addStaticRoute(String routePattern, String hostnamePattern, String pathToStaticFolder) {
+    static void addStaticRoute(String routePattern, String hostnamePattern, String pathToStaticFolder) throws IOException {
         Router router = VertxInstance.getHttpRouter();
         Route route = router.route(routePattern);
         if (hostnamePattern != null)
             route = route.virtualHost(hostnamePattern);
-        boolean absolute = Path.of(pathToStaticFolder).isAbsolute();
+        Path staticPath = Paths.get(pathToStaticFolder);
+        boolean absolute = staticPath.isAbsolute();
+        int bangIndex = pathToStaticFolder.indexOf("!/");
+        if (bangIndex != - 1) {
+            Path path = extractArchivedFolder(pathToStaticFolder);
+            pathToStaticFolder = path.toAbsolutePath().toString();
+            absolute = true;
+        }
         route.handler(StaticHandler.create(absolute ? FileSystemAccess.ROOT : FileSystemAccess.RELATIVE, pathToStaticFolder));
+    }
+
+    private static final Map<String, Path> EXTRACTED_ARCHIVED_FOLDERS = new HashMap<>();
+
+    private static Path extractArchivedFolder(String archiveWithInternalPath) throws IOException {
+        Path alreadyExtractedPath = EXTRACTED_ARCHIVED_FOLDERS.get(archiveWithInternalPath);
+        if (alreadyExtractedPath != null)
+            return alreadyExtractedPath;
+
+        int sep = archiveWithInternalPath.indexOf("!/");
+        String archiveFile = archiveWithInternalPath.substring(0, sep);
+        String internalPath = archiveWithInternalPath.substring(sep + 2);
+
+        URI archiveUri = URI.create("jar:" + Path.of(archiveFile).toUri());
+        Path extractedPath = Files.createTempDirectory("webfx-archive-extracted-");
+
+        try (FileSystem fs = FileSystems.newFileSystem(archiveUri, Map.of())) {
+            Path rootInArchive = fs.getPath("/" + internalPath);
+            try (Stream<Path> walk = Files.walk(rootInArchive)) {
+                walk.forEach(source -> {
+                    try {
+                        Path dest = extractedPath.resolve(rootInArchive.relativize(source).toString());
+                        if (Files.isDirectory(source)) {
+                            Files.createDirectories(dest);
+                        } else {
+                            Files.copy(source, dest);
+                        }
+                        dest.toFile().deleteOnExit();
+                    } catch (IOException e) {
+                        throw new UncheckedIOException(e);
+                    }
+                });
+            }
+        }
+
+        extractedPath.toFile().deleteOnExit();
+
+        EXTRACTED_ARCHIVED_FOLDERS.put(archiveWithInternalPath, extractedPath);
+
+        return extractedPath;
     }
 
     static void finaliseRouter() {
         Router router = VertxInstance.getHttpRouter();
-
         router.route().handler(BodyHandler.create());
     }
 }
